Fix: Prevent text overflow

--- a/__core.scss
+++ b/__core.scss
@@ -64,7 +64,7 @@
 		left: 0;
 		right: 0;
 		top: 50%;
-		padding: 0 $unified-select-gutter;
+		padding: 0.5em $unified-select-gutter;
 		padding-right: $unified-select-height;
 		white-space: nowrap;
 		text-overflow: ellipsis;
